  * installer now adds a "D Exception" to the "Win32 Exception" list to allow
    the debugger to stop when a D exception is thrown

2011-02-27 Version 0.3.22

  * Visual D now builds with DMD 2.052
  * fixed WindowsApp template to build with DMD 2.052
  * fixed some COM leaks
  * paste ring menu no longer stops when repeating the first entry and 
    avoids duplicate entries
  * new token search and replace dialog
  * new compilation mode: compile and link in separate steps allowing multiple object files
  * the option "Statement completion -> Parameter information" is now respected,
    showing the parameter tooltip when writing the opening parenthesis
  * smart-indent now respects the contents of the new line when inserting a line break
  * now supporting the Code Definition Window

2011-03-09 Version 0.3.23

  * fixed issue on x64 with threads without TLS that crept back in by migrating to DMD 2.052
  * separate compile and link: removed -X,-D,-H from the link step to avoid creating empty files
  * new compilation mode: compile only to set your link step manually in the post-build step
  * jumping to errors in files that exist in several projects now jump to the correct source

unreleased Version 0.3.24

  * fixed crash when installing/uninstalling other Visual Studio plugins
  * added menu entry "Open Website" to browse the visual D Website inside Visual Studio
  * added support for Object Browser and Class View
  * now runs a parser in the background to underline syntax errors
  * fixed scanning of floating point literals starting with '.'
  * default colors for identifiers, numbers and operators now follow the "Plain Text" setting
  * new version 0.1.2 of mago that fixes some issues with exceptions and improves
    the call stack display
  * if a source file is used in multiple project, it is no longer opened multiple times in 
    the editor
  * improved lookup speed in browse info, now removing duplicate entries for eponymous templates