@@ -279,3 +279,6 @@ unreleased Version 0.3.24
   * if a source file is used in multiple project, it is no longer opened multiple times in 
     the editor
   * improved lookup speed in browse info, now removing duplicate entries for eponymous templates
+  * fixed issues with quoted arguments with trailing backslash in settings
+  * browse info now updated when JSON paths changed in global options
+  * fixed spurious crash when removing multiple lines 
